2014-11-03  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.41

	* Fixed another two @vary bugs (tst82 & tst83 in substitute.cdb).

2014-11-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.40

	* Fixed a @vary bug.

2014-05-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.39

	* Fixed checking for notebook version.

2014-05-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.38

	* Fixed a sign bug with nested expressions (probably related to
	the one fixed for 1.36...).

2014-03-25  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* 1.37

	* Fixes for problems flagged by clang.

	* Released 1.36

	* Fixed a bug that made 2*(-A+B) get simplified
	incorrectly. Thanks to James Mossman for spotting this.

2014-03-15  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.35

	* Added 'dvipsnames' to the options for the color package.

2014-03-14  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Tagged 1.34

	* Modified xperm_new.c -> .cc to not rely on nested functions and
	variable-sized arrays anymore. This makes it compile with clang.
	Passes all tests again.

2012-02-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.31

	* Fixed compilation problems on newer g++ versions having to do
	with functions hiding virtual base functions. Simplified algorithm
	base class.

2011-06-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.30

2011-06-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* More fixes for @vary.

2011-06-01  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.29

	* Fixed compilation problems in tree.hh and youngtab.hh with newer
	versions of g++.

	* Fixed bug with @vary acting on derivatives or accented symbols.

2011-04-10  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added 'self' attribute to WeightInherit to allow for dimension
	counting in which operators have a dimension themselves too.

2011-03-11  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.28
