@@ -1,3 +1,7 @@
+2014-11-09  Kasper Peeters  <kasper.peeters@phi-sci.com>
+
+	* Fixed another @vary bug (tst84 in substitute.cdb).
+
 2014-11-03  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Released 1.41
